objects/Contract_Invoice_Header__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SFSOLSPLIT</fullName>
                </value>
                <value>
                    <fullName>SFSOLSPLITCN</fullName>
                </value>
                <value>
                    <fullName>SFSOLUTION</fullName>
                </value>
                <value>
                    <fullName>SFSOLUTIONCN</fullName>
                </value>
                <value>
                    <fullName>SFSOL27</fullName>
                </value>
                <value>
                    <fullName>SFSOL27CN</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <isActive>false</isActive>
                    <label>4</label>
                </value>
                <value>
                    <fullName>RISOLUTION</fullName>
                    <isActive>false</isActive>
                    <label>RISOLUTION</label>
                </value>
                <value>
                    <fullName>RISOLUTIONCN</fullName>
                    <isActive>false</isActive>
                    <label>RISOLUTIONCN</label>
                </value>
                <value>
                    <fullName>RISOLUTIONCR</fullName>
                    <isActive>false</isActive>
                    <label>RISOLUTIONCR</label>
                </value>
                <value>
                    <fullName>RISUBS</fullName>
                    <isActive>false</isActive>
                    <label>RISUBS</label>
                </value>
                <value>
                    <fullName>RISUBSCN</fullName>
                    <isActive>false</isActive>
                    <label>RISUBSCN</label>
                </value>
                <value>
                    <fullName>S1NINV</fullName>
                    <isActive>false</isActive>
                    <label>S1NINV</label>
                </value>
                <value>
                    <fullName>S1RIC</fullName>
                    <isActive>false</isActive>
                    <label>S1RIC</label>
                </value>
                <value>
                    <fullName>S1RII</fullName>
                    <isActive>false</isActive>
                    <label>S1RII</label>
                </value>
                <value>
                    <fullName>SFBANG</fullName>
                    <isActive>false</isActive>
                    <label>SFBANG</label>
                </value>
                <value>
                    <fullName>SFBANGCN</fullName>
                    <isActive>false</isActive>
                    <label>SFBANGCN</label>
                </value>
                <value>
                    <fullName>SFBUNDLED</fullName>
                    <isActive>false</isActive>
                    <label>SFBUNDLED</label>
                </value>
                <value>
                    <fullName>SFBUNDLEDAED</fullName>
                    <isActive>false</isActive>
                    <label>SFBUNDLEDAED</label>
                </value>
                <value>
                    <fullName>SFBUNDLEDCN</fullName>
                    <isActive>false</isActive>
                    <label>SFBUNDLEDCN</label>
                </value>
                <value>
                    <fullName>SFBUNDLEDCNAED</fullName>
                    <isActive>false</isActive>
                    <label>SFBUNDLEDCNAED</label>
                </value>
                <value>
                    <fullName>SFBUNDLEDTAX</fullName>
                    <isActive>false</isActive>
                    <label>SFBUNDLEDTAX</label>
                </value>
                <value>
                    <fullName>SFBUNDLEDTAXCN</fullName>
                    <isActive>false</isActive>
                    <label>SFBUNDLEDTAXCN</label>
                </value>
                <value>
                    <fullName>SFGURG</fullName>
                    <isActive>false</isActive>
                    <label>SFGURG</label>
                </value>
                <value>
                    <fullName>SFGURGCN</fullName>
                    <isActive>false</isActive>
                    <label>SFGURGCN</label>
                </value>
                <value>
                    <fullName>SFSOE</fullName>
                    <isActive>false</isActive>
                    <label>SFSOE</label>
                </value>
                <value>
                    <fullName>SFSOEAED</fullName>
                    <isActive>false</isActive>
                    <label>SFSOEAED</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_billing_frequency__c</fullName>
        <formula>TEXT(Order__r.Contract.Service_billing_frequency__c)</formula>
        <label>Service billing frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SunSystems_Order_Reference__c</fullName>
        <inlineHelpText>Once the order has been raised in SunSystems enter the Order Reference here</inlineHelpText>
        <label>Sun Order Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sun_Invoice_Date__c</fullName>
        <description>Backend field to capture the date string from PA Stream</description>
        <label>Sun Invoice Date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sun_Invoice_Number__c</fullName>
        <label>Sun Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sun_Payment_Due_Date__c</fullName>
        <description>Backend field to capture the date string from PA Stream</description>
        <label>Sun Payment Due Date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <description>Dependent field on Escalation Stage</description>
        <label>Timing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unconfirmed_Sun_Order_Number__c</fullName>
        <formula>IF(CONTAINS(Order__r.Unconfirmed_Sun_Order_Number__c, &apos;NA&apos;) || 
			CONTAINS(Order__r.Unconfirmed_Sun_Order_Number__c, &apos;N/A&apos;) ||
			CONTAINS(Order__r.Unconfirmed_Sun_Order_Number__c, &apos;na&apos;) ||
			CONTAINS(Order__r.Unconfirmed_Sun_Order_Number__c, &apos;n/a&apos;) ||
			CONTAINS(Order__r.Unconfirmed_Sun_Order_Number__c, &apos;nA&apos;) ||
			CONTAINS(Order__r.Unconfirmed_Sun_Order_Number__c, &apos;Na&apos;) ||
			CONTAINS(Order__r.Unconfirmed_Sun_Order_Number__c, &apos;n/A&apos;) ||
			CONTAINS(Order__r.Unconfirmed_Sun_Order_Number__c, &apos;N/a&apos;) ,
			&apos;&apos;,
			Order__r.Unconfirmed_Sun_Order_Number__c
		)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unconfirmed Sun Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unpaid_Amount__c</fullName>
        <formula>IF(Invoice_Gross_Amount__c = null,0,Invoice_Gross_Amount__c) - IF(Invoice_Transaction_Amount__c = null,0,Invoice_Transaction_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X30_Days_before_SOP_Date_for_PO__c</fullName>
        <formula>IF(Process_Date__c &lt; DATEVALUE(&apos;2023-08-01&apos;) , false, IF(Process_Date__c - TODAY() &lt;= 30, TRUE, FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>30 Days before SOP Date for PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X7_Day_Check_for_PO_Number_Email__c</fullName>
        <description>This field returns TRUE if TODAY - Awaiting PO Date = 7</description>
        <formula>IF( TODAY() - Awaiting_PO_Notification_Sent_On__c = 7, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>7 Day Check for PO Number Email</label>
        <type>Checkbox</type>
    </fields>
    <label>Invoice Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Number_From_Contract__c</columns>
        <columns>Billing_Account_Name__c</columns>
        <columns>BU_From_Contract_Header__c</columns>
        <columns>Contract__c</columns>
        <columns>Contract_Line__c</columns>
        <columns>Invoice_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>E047733</label>
    </listViews>
    <listViews>
        <fullName>All_Invoice_Headers</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Status__c</columns>
        <columns>BU_From_Contract_Header__c</columns>
        <columns>Account_Number_From_Contract__c</columns>
        <columns>Billing_Account_Name__c</columns>
        <columns>Sun_Invoice_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Status__c</field>
            <operation>notEqual</operation>
            <value>Sun Order Complete</value>
        </filters>
        <filters>
            <field>Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Sun Invoice Complete</value>
        </filters>
        <label>All Invoice Headers</label>
    </listViews>
    <listViews>
        <fullName>RI_Invoice_Header</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Status__c</columns>
        <columns>Billing_Account_Name__c</columns>
        <columns>Sales_Type__c</columns>
        <columns>SunSystems_Order_Reference__c</columns>
        <columns>Sun_Invoice_Number__c</columns>
        <columns>Unconfirmed_Sun_Order_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract_Invoice_Header__c.Invoice_Header</value>
        </filters>
        <filters>
            <field>Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Ready for SOE Review</value>
        </filters>
        <filters>
            <field>Order_Method__c</field>
            <operation>equals</operation>
            <value>RI</value>
        </filters>
        <label>RI Invoice Header</label>
    </listViews>
    <nameField>
        <displayFormat>CIH{0000000}</displayFormat>
        <label>Invoice Header ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Headers</pluralLabel>
    <recordTypes>
        <fullName>Invoice_Header</fullName>
        <active>true</active>
        <label>Invoice Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BillingContact_as_OrderAccountcontact</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),
Billing_Contact__r.AccountId &lt;&gt;   Order__r.AccountId ,false)</errorConditionFormula>
        <errorDisplayField>Billing_Contact__c</errorDisplayField>
        <errorMessage>Order Contact must belong to the selected Order&apos;s Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Select_Ready_for_SOE</fullName>
        <active>false</active>
        <description>SSE-6455,6456 
if Order Method = RI or Extended comment is not blank invoice status can not 
moved to Ready for SOE Review.</description>
        <errorConditionFormula>AND(ISPICKVAL(Invoice_Status__c ,&quot;Ready for SOE review&quot;),OR( NOT(ISBLANK(Invoice_Header_Comments__c )),ISPICKVAL(Order_Method__c,&apos;RI&apos;)))</errorConditionFormula>
        <errorDisplayField>Invoice_Status__c</errorDisplayField>
        <errorMessage>Invoice status can not be moved to Ready for SOE review,if there is value in extended comments or Order Method is RI</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_CreditNote_On_NegativeInvoiceTotal</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(ISPICKVAL( Invoice_Status__c, &apos;Ready to Invoice&apos;),ISPICKVAL( Invoice_Status__c, &apos;Ready for SOE Review&apos;)),Invoice_Total__c &lt; 0,NOT(Credit_Note__c = true), NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)))</errorConditionFormula>
        <errorMessage>On the invoice header, &apos;Credit Note&apos; checkbox must be checked if &apos;Invoice Total&apos; is negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Invoice_Total</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(ISPICKVAL( Invoice_Status__c, &apos;Ready to Invoice&apos;),ISPICKVAL( Invoice_Status__c, &apos;Ready for SOE Review&apos;)), Credit_Note__c = true, NOT(Invoice_Total__c &lt;= 0),NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)))</errorConditionFormula>
        <errorMessage>On the Invoice Header, &apos;Invoice Total&apos; must be negative when &apos;Credit Note&apos; checkbox is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_if_PO_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),
OR(AND(NOT(Order__r.Account.PurchaseOrderRequired__c),ISNULL(PO_number__c ),NOT(ISPICKVAL(Invoice_Status__c, &apos;Draft&apos;))) 
,AND(NOT(Order__r.Account.PurchaseOrderRequired__c),ISBLANK(PO_number__c ),NOT(ISPICKVAL(Invoice_Status__c, &apos;Draft&apos;)))),
false)</errorConditionFormula>
        <errorMessage>This Account requires a PO on the invoice header</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CreditReasonCodeRequired</fullName>
        <active>true</active>
        <description>SSE-6173</description>
        <errorConditionFormula>AND( NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),TEXT(Credit_Reason_Code__c)=&quot;&quot;,OR(Credit_Note__c = true, CONTAINS(TEXT(Sales_Type__c ), &quot;CN&quot;) ) ) &amp;&amp; IsAutomationBypassed__c = false</errorConditionFormula>
        <errorDisplayField>Credit_Reason_Code__c</errorDisplayField>
        <errorMessage>Credit Reason Code is required if Sales Type is Credit Note or Credit Note is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Currency_Should_Match_Order_Currency</fullName>
        <active>true</active>
        <description>Invoice header currency must be same as related order currency.</description>
        <errorConditionFormula>IF(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),IF(TEXT(CurrencyIsoCode) = TEXT( Order__r.CurrencyIsoCode   ),false,true),false)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Invoice header currency must be same as related order currency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ExtendedCommentsCheckforManualProcess</fullName>
        <active>true</active>
        <description>Recent change done for SSE-13135
SSE-6455,6456:if Extended Comments field is populated and Manual is not ticked the user cannot process through the automatic process- 
the header cannot moved to Ready for SOE Review.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Invoice_Header_Comments__c)),Manual_Transfer__c =false, ISBLANK(Unconfirmed_Sun_Order_Number__c ))  &amp;&amp; IsAutomationBypassed__c = false</errorConditionFormula>
        <errorMessage>All orders with Extended Comments must be processed manually.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GST_Identification_Number_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(BU__c , &apos;India - IN1&apos;) ,OR(ISPICKVAL(Invoice_Status__c, &apos;Ready to Invoice&apos;),ISPICKVAL(Invoice_Status__c, &apos;Ready for Sun Transfer&apos;),ISPICKVAL(Invoice_Status__c, &apos;Ready for SOE Review&apos;)), ISBLANK( GST_Identification_Number__c ),
Invoice_Account__r.Exempt_GST__c = False
)</errorConditionFormula>
        <errorDisplayField>GST_Identification_Number__c</errorDisplayField>
        <errorMessage>The GST Identification number is mandatory when the BU on Invoice Header equals India - IN1 and  Invoice Status is Ready to Invoice/Ready for SOE Review/Ready for Sun Transfer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InvoiceAccountBUShouldBeSameAsInvHeadBU</fullName>
        <active>true</active>
        <description>Validation rule to prevent Invoice Account BU from being different from the Invoice Header BU</description>
        <errorConditionFormula>IF(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),
IF(AND(TEXT(Invoice_Account__r.BU__c ) &lt;&gt; BU_From_Contract_Header__c,NOT(ISBLANK(Invoice_Account__c))),true,false),false)</errorConditionFormula>
        <errorDisplayField>Invoice_Account__c</errorDisplayField>
        <errorMessage>Invoice Account&apos;s  BU Should be same as the Invoice Header&apos;s BU.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InvoiceContactShouldBeOfInvoiceAccount</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),Invoice_Contact__r.AccountId &lt;&gt;  Invoice_Account__r.Id,false)</errorConditionFormula>
        <errorDisplayField>Invoice_Contact__c</errorDisplayField>
        <errorMessage>Invoice Contact must belong to the selected Invoice Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InvoiceHeader_Cannot_Move_Out_from_Draft</fullName>
        <active>true</active>
        <description>Invoice Header cannot be moved to any other status value unless it has an invoice line added to the related list.</description>
        <errorConditionFormula>IF(AND(ISPICKVAL(PRIORVALUE(Invoice_Status__c),&apos;Draft&apos;), No_of_Invoice_Line__c = 0,NOT(OR(ISPICKVAL(Invoice_Status__c,&apos;Cancelled&apos;),ISPICKVAL(Invoice_Status__c,&apos;No Usage&apos;))),NOT(ISNEW()),ISCHANGED(Invoice_Status__c)),true,false)</errorConditionFormula>
        <errorDisplayField>Invoice_Status__c</errorDisplayField>
        <errorMessage>Invoice Header cannot be moved to another status unless it has an invoice line added.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InvoiceStatusCheckPriorValue</fullName>
        <active>true</active>
        <description>User cannot change ready for sun transfer if the prior value is not ready for SOE review</description>
        <errorConditionFormula>AND(NOT($Permission.OATs), OR(ISCHANGED(Invoice_Status__c),ISNEW()) , NOT(ISPICKVAL(PRIORVALUE(Invoice_Status__c),&quot;Ready for SOE Review&quot;)),
ISPICKVAL(Invoice_Status__c,&apos;Ready for Sun Transfer&apos;))</errorConditionFormula>
        <errorDisplayField>Invoice_Status__c</errorDisplayField>
        <errorMessage>Please update Invoice status to &apos;Ready for SOE Review&apos; before changing it to &apos;Ready for Sun Transfer&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InvoiceStatusDependsOnOrdersStatus</fullName>
        <active>true</active>
        <description>Invoice Header status cannot be set to &apos;Ready to Invoice&apos; or &apos;Ready for SOE Review&apos; or &apos;Ready for Sun Transfer&apos; unless the related Order Header status is Completed, Approved, Awaiting PO or Awaiting GST/VAT Info</description>
        <errorConditionFormula>IF(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),
AND(
OR(ISCHANGED(Invoice_Status__c), ISNEW()),
OR(ISPICKVAL(Invoice_Status__c,&apos;Ready for SOE Review&apos;),ISPICKVAL(Invoice_Status__c,&apos;Ready to Invoice&apos;),ISPICKVAL(Invoice_Status__c,&apos;Ready for Sun Transfer&apos;)),
NOT(OR(ISPICKVAL(Order__r.Oats_Status__c,&quot;Completed&quot; ),
ISPICKVAL(Order__r.Oats_Status__c,&quot;Approved&quot; ),
ISPICKVAL(Order__r.Oats_Status__c,&quot;Awaiting PO&quot; ), ISPICKVAL(Order__r.Oats_Status__c,&quot;Awaiting GST/VAT Info&quot;)))
),false)</errorConditionFormula>
        <errorMessage>Invoice Header status cannot be set to &apos;Ready to Invoice&apos; or &apos;Ready for SOE Review&apos; or &apos;Ready for Sun Transfer&apos; unless the related Order OAT status is &apos;Awaiting PO&apos; or &apos;Awaiting GST/VAT Info&apos; or &apos;Completed&apos; or &apos;Approved&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InvoiceStatusUpdateValidationGST</fullName>
        <active>true</active>
        <description>SSE-6023: User should ONLY be allowed to mark Invoice Status as &apos;Ready for SOE Review&apos; OR &apos;Ready to Invoice&apos; if associated GST record&apos;s (&apos;Automatic Transfer Status&apos; = Transferred OR &apos;Manual Transfer&apos; = YES).</description>
        <errorConditionFormula>AND(if( TEXT(GST_Identification_Number__r.Manual_Transfer__c) = &apos;Yes&apos;, false ,
TEXT(GST_Identification_Number__r.Transfer_Status__c)!=&quot;Transferred&quot;),NOT(!ISNULL(GST_Identification_Number__c)),
OR(ISPICKVAL( Invoice_Status__c ,&apos;Ready for SOE Review&apos;),ISPICKVAL( Invoice_Status__c ,&apos;Ready to Invoice&apos;),ISPICKVAL(BU__c, &apos;India - IN1&apos;) ))</errorConditionFormula>
        <errorMessage>You cannot proceed further if linked GST record is not transferred to SUN.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Cannot_Be_Created_VOpp_Is_yes</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
NOT(CONTAINS( $Profile.Name, &quot;System Administrator&quot; )),
IF(ISPICKVAL( Order__r.Opportunity.Variation_Opportunity__c , &apos;Yes&apos;),true,false ))</errorConditionFormula>
        <errorMessage>Invoice Header Cannot Be Created If Variation Opportunity Is &apos;YES&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Contact_MustBe_TransferToInfor10</fullName>
        <active>false</active>
        <errorConditionFormula>AND 
( 
NOT(ISBLANK(Invoice_Contact__c)), 
NOT(ISPICKVAL(Invoice_Contact__r.SFDC2SUN_TransferStatus__c , &apos;Transferred&apos;)), 
NOT(ISPICKVAL(BU__c, &apos;South Africa - ZA1&apos;)),
OR(ISPICKVAL(Invoice_Status__c, &apos;Ready to Invoice&apos;),ISPICKVAL(Invoice_Status__c, &apos;Ready for SOE Review&apos;))
)</errorConditionFormula>
        <errorMessage>The invoice contact related to this Invoice header record is not yet transferred to Infor10. Please transfer it first before setting Invoice Status is Ready to Invoice or Ready for SOE Review</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Header_Can_Only_Move_To_Draft</fullName>
        <active>true</active>
        <description>Invoice Header can only be moved to &quot;Draft&quot; from &quot;Cancelled&quot; or &quot;No Usage&quot; Invoice Status.</description>
        <errorConditionFormula>IF(
    AND(
        ISPICKVAL(Invoice_Status__c, &apos;Draft&apos;),
        NOT(
            OR(
                ISPICKVAL(PRIORVALUE(Invoice_Status__c), &apos;Cancelled&apos;),
                ISPICKVAL(PRIORVALUE(Invoice_Status__c), &apos;No Usage&apos;)
            )
        ),
        ISCHANGED(Invoice_Status__c)
    ),
    true,
    false
)</errorConditionFormula>
        <errorDisplayField>Invoice_Status__c</errorDisplayField>
        <errorMessage>Invoice Header can only move to Draft from Cancelled or No Usage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Job_Number_is_Required_for_MS_Invoice</fullName>
        <active>true</active>
        <description>Job Number is Required for MS Invoice</description>
        <errorConditionFormula>IF(AND(NOT(ISNEW()),Order__r.Opportunity.MS_Opportunity__c = true, ISCHANGED(Process_Date__c), ISNULL(PRIORVALUE(Process_Date__c)), NOT(ISNULL(Process_Date__c)), Job_Number__c = NULL),true, IF(AND(NOT(ISNEW()),Order__r.Opportunity.MS_Opportunity__c = true, ISCHANGED(Job_Number__c), NOT(PRIORVALUE(Job_Number__c) = NULL),Job_Number__c = NULL),true, false))</errorConditionFormula>
        <errorMessage>Job Number is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MentionReasonwhenManualTransferChecked</fullName>
        <active>true</active>
        <description>Reason field is mandatory when manual transfer checkbox is checked</description>
        <errorConditionFormula>AND(PRIORVALUE(Manual_Transfer__c)= False, ISCHANGED(Manual_Transfer__c), ISBLANK( Manual_Transfer_Reason__c ))</errorConditionFormula>
        <errorDisplayField>Manual_Transfer_Reason__c</errorDisplayField>
        <errorMessage>Reason is mandatory when manual transfer is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_number_added_before_invoice_num</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
				NOT(
								CONTAINS($Profile.Name,&apos;System Admin&apos;)
				) &amp;&amp; 
    NOT($Permission.Invoice_Header_Edit_fields) ,
				AND ( 
								NOT(
												ISBLANK(Sun_Invoice_Number__c )
								),
								ISBLANK(SunSystems_Order_Reference__c )
				),
				false
)</errorConditionFormula>
        <errorDisplayField>Sun_Invoice_Number__c</errorDisplayField>
        <errorMessage>&apos;Sun Invoice Number&apos; field cannot have a value until the &apos;SUN Order Reference&apos; field has a value added to it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_Mandatory_on_Credit_Note_True</fullName>
        <active>true</active>
        <description>SSE-6700</description>
        <errorConditionFormula>AND(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),Credit_Note__c = true,PO_number__c = &apos;&apos;)  &amp;&amp; IsAutomationBypassed__c = false</errorConditionFormula>
        <errorDisplayField>PO_number__c</errorDisplayField>
        <errorMessage>Original Sales Invoice Number is required if Credit Note is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Invoice_status_from_changing</fullName>
        <active>true</active>
        <description>Prevent Invoice Status on Invoice Header from being changed to Ready for SOE or Ready for SUN Transfer if the related Invoice Account has an Account Approval Status of Unapproved or Submitted for Approval.</description>
        <errorConditionFormula>IF(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),AND(NOT (ISPICKVAL(Invoice_Account__r.Status__c , &apos;Approved&apos;)),OR(ISPICKVAL(Invoice_Status__c, &apos;Ready for SOE Review&apos;) ,ISPICKVAL(Invoice_Status__c, &apos;Ready for Sun Transfer&apos;))),false)</errorConditionFormula>
        <errorMessage>Invoice header can not be selected as ready for SOE or ready for SUN transfer as Account Approval Status is Unapproved or Submitted for Approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_credit_note_checkbox</fullName>
        <active>true</active>
        <description>SSE-6851:Restrict sales type to be used when credit note box is ticked</description>
        <errorConditionFormula>AND(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)), Credit_Note__c =false, CONTAINS(TEXT( Sales_Type__c), &apos;CN&apos;))</errorConditionFormula>
        <errorDisplayField>Credit_Note__c</errorDisplayField>
        <errorMessage>The credit note checkbox should be checked if a credit sales type is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_credit_note_sales_type</fullName>
        <active>true</active>
        <description>SSE-13096 : recent change
SSE-6851:Restrict sales type to be used when credit note box is ticked</description>
        <errorConditionFormula>AND(
NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),
Credit_Note__c =true,
Manual_Transfer__c =false,
OR(
AND(NOT( CONTAINS(TEXT( Sales_Type__c), &apos;CN&apos;)),
NOT( CONTAINS(TEXT( Sales_Type__c), &apos;CR&apos;)),
NOT(ISPICKVAL(Sales_Type__c,&apos;S1RIC&apos;))),
ISPICKVAL(Sales_Type__c,&apos;&apos;) )
)  &amp;&amp; IsAutomationBypassed__c = false</errorConditionFormula>
        <errorDisplayField>Sales_Type__c</errorDisplayField>
        <errorMessage>You cannot choose a non credit sales type if credit note checkbox is true.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_specific_fields_edition</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name = &apos;Read Only&apos; &amp;&amp;  NOT(ISCHANGED(RecordTypeId)) &amp;&amp; 
NOT($Permission.Invoice_Header_Edit_fields) &amp;&amp;
$Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp;
$User.Id &lt;&gt; &apos;00520000000ihKr&apos; &amp;&amp;
(ISCHANGED(Invoice_Status__c) || ISCHANGED(SunSystems_Order_Reference__c))</errorConditionFormula>
        <errorMessage>Only authorized users can edit the fields &apos;Invoice Status&apos; and &apos;Sun Order Reference&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_value_for_Invoice_Status_Auto</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),AND(ISPICKVAL(Invoice_Status__c , &quot;Ready to Invoice&quot;),Manual_Transfer__c = false,ISBLANK( Unconfirmed_Sun_Order_Number__c)), false)</errorConditionFormula>
        <errorDisplayField>Invoice_Status__c</errorDisplayField>
        <errorMessage>&apos;Ready to Invoice&apos; can only be selected when &apos;Unconfirmed SUN Order Number&apos; has a value or &apos;Manual Transfer&apos; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_value_for_Invoice_Status_Manual</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Invoice_Status__c , &quot;Ready for Sun Transfer&quot;), 
ISPICKVAL(Invoice_Status__c , &quot;Ready for SOE review&quot;)),OR( Manual_Transfer__c = true,NOT(ISBLANK( Unconfirmed_Sun_Order_Number__c))))</errorConditionFormula>
        <errorDisplayField>Invoice_Status__c</errorDisplayField>
        <errorMessage>&apos;Ready for SOE Review&apos; cannot be selected when &apos;Unconfirmed SUN Order Number&apos; is available or &apos;Manual Transfer&apos; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalesTypeNotRequiredManualProcess</fullName>
        <active>true</active>
        <description>SSE-6711-Sales Type value should not be populated for manual orders</description>
        <errorConditionFormula>AND(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)), OR( Manual_Transfer__c =true, not(ISBLANK(Unconfirmed_Sun_Order_Number__c) )),TEXT(Sales_Type__c )!=&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Sales_Type__c</errorDisplayField>
        <errorMessage>Sales Type value should not be populated when &apos;Unconfirmed SUN Order Number&apos; is available or &apos;Manual Transfer&apos; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalesTypeRequired</fullName>
        <active>true</active>
        <description>SSE-6174
The Sales Type field will be mandatory when the Invoice Status moves to Ready for SOE Review and the &apos;Manual Transfer&apos; is set to FALSE</description>
        <errorConditionFormula>AND(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),OR(ISPICKVAL(Invoice_Status__c ,&quot;Ready for SOE review&quot;),ISPICKVAL(Invoice_Status__c ,&quot;Ready for Sun Transfer&quot;)), Manual_Transfer__c =false,TEXT(Sales_Type__c )=&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Sales_Type__c</errorDisplayField>
        <errorMessage>Sales Type is required when Invoice Status is &apos;Ready for SOE Review&apos; or &apos;Ready for Sun Transfer&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SunOrderRefValidationforAutomatic</fullName>
        <active>true</active>
        <description>SSE-6199:An error message will appear if the user tries to modify the &apos;SUN Order Reference Number&apos; when &apos;Manual Transfer&apos; = &apos;False&apos; OR Unconfirmed Sun Order Reference is &apos;Blank&apos;</description>
        <errorConditionFormula>AND(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),NOT(ISNEW()),ISCHANGED(SunSystems_Order_Reference__c ) ,PRIORVALUE(SunSystems_Order_Reference__c) !=&apos;&apos;,NOT(ISBLANK(SunSystems_Order_Reference__c)),OR( Manual_Transfer__c =False,ISNULL(Unconfirmed_Sun_Order_Number__c )))</errorConditionFormula>
        <errorDisplayField>SunSystems_Order_Reference__c</errorDisplayField>
        <errorMessage>Since this record was automatically transferred, you are not allowed to modify the &apos;SUN Order Reference&apos;. You can delete this value to restart the transfer process.</errorMessage>
    </validationRules>
</CustomObject>